--- a/produtos.html
+++ b/produtos.html
@@ -100,7 +100,7 @@
               virou completamente um caos após nano-robos tocarem o terror. Seu grande objetivo é desvendar todos os mistérios espalhados por Jericho para encontar Athena, que no caso é mais uma sobrevivente do acidente. Mas
               com certeza não será uma tarefa nada fácil, já que a guerra das máquinas está acontecendo por toda a cidade.
             </p>
-            <footer class="blockquote-footer">Combate incrivelmente irresistível e interessante com um robusto sistema de evolução de personagem <cite title="Source Title"></cite></footer>
+            <footer class="blockquote-footer"> Corte e arranque os membros dos inimigos! <cite title="Source Title"></cite></footer>
           </blockquote>
         </div>
     </div>
@@ -157,8 +157,10 @@
         </div>
         <div class="card-body">
           <blockquote class="blockquote mb-0">
-            <p>Enfrente seus medos à medida que procura respostas na velha cidade de Yharnam, que está amaldiçoada com uma doença endêmica se espalhando como fogo pelas ruas. Perigo, morte e 
-              loucura ficam à espreita em cada esquina deste mundo sombrio e horripilante, e você deverá descobrir seus segredos mais profundos para sobreviver.</p>
+            <p>O palco do jogo é a cidade Yharnam, por volta do século XIX. A cidade é conhecida por sua medicina, e há uma “lenda” que conta que a cidade 
+              possui um antigo remédio, capaz de curar qualquer doença. Muitos viajaram até a cidade em procura dessa cura, e adivinhe só: o seu personagem 
+              é um deles. Porém, quando ele chega lá, descobre que a cidade sofre de um problema maior que o seu!
+              Yharnam está sofrendo de uma doença endêmica que transforma pessoas e animais em coisas horrendas e violentas. Transforma-as em feras.</p>
             <footer class="blockquote-footer">Em Yharnam, a melhor defesa é uma estratégia sólida de ataque.<cite title="Source Title"></cite></footer>
           </blockquote>
         </div>
